# neucode

./: .clang-format  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.akida-export  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py  setup_vcs_compile_db.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: index.md
docs/neucode/: controllers.md  experiment.md  generators.md  plants.md  profiles.md  recorder.md  results.md  rewards.md  scenarios.md  signals.md  simcore.md  ui.md
docs/neucode/communication/: client.md
docs/neucode/communication/interface/: base.md  serial.md
docs/neucode/exporters/: ann.md  base.md  snn.md
docs/neucode/harness/: base.md  hardware.md  simulation.md
docs/neucode/trainers/: ann_replacement.md  collector.md  snn_replacement.md
docs/neucode/tuners/: base.md  classic.md  rl.md  supervised.md
firmware/actuator/: actuator.c  actuator.h  actuator_dummy.c  actuator_dummy.h
firmware/boards/nucleo-g431rb-simplefoc/: .gitignore  platformio.ini  pre_build.py
firmware/boards/nucleo-g431rb-simplefoc/src/: main.cpp
firmware/comm/: cmd_handler.c  cmd_handler.h  comm.c  comm.h
firmware/controller/: controller.c  controller.h  controller_types.c  controller_types.h
firmware/controller/ann/: ann.c  ann.h  inference.c  inference.h  model_data_default.h
firmware/controller/pid/: pid_adapter.c  pid_adapter.h
firmware/controller/snn/: inference.h  model_config_default.h  model_data_default.h  snn.c  snn.h  snn_inference.c
firmware/helper/: profiler.h
firmware/loop/: loop.c  loop.h
firmware/sensor/: sensor.c  sensor.h  sensor_dummy.c  sensor_dummy.h
firmware/setpoint/: setpoint.c  setpoint.h
neucode/: __init__.py  _torch_optional.py  architectures.py  controllers.py  datagen.py  evaluation.py  experiment.py  generators.py  plants.py  profiles.py  recorder.py  reporting.py  results.py  rewards.py  scenarios.py  signals.py  simcore.pyx  ui.py
neucode/c_src/include/: disturbance.h  math_constants.h  metrics.h  neucode_types.h  pid.h  plant_foipdt.h  plant_fopdt.h  sim.h  sp.h
neucode/c_src/src/: disturbance.c  metrics.c  pid.c  plant_foipdt.c  plant_fopdt.c  sim.c  sp.c
neucode/communication/: __init__.py  client.py
neucode/communication/interface/: __init__.py  base.py  serial.py
neucode/exporters/: __init__.py  akida.py  ann.py  base.py  nir.py  snn.py
neucode/harness/: __init__.py  base.py  hardware.py  simulation.py
neucode/nn/: __init__.py  layers.py
neucode/trainers/: __init__.py  ann_replacement.py  collector.py  dagger.py  snn_replacement.py
neucode/tuners/: __init__.py  base.py  classic.py  rl.py  supervised.py  utils.py
tests/c_tests/: test_control_loops.c  test_runner.c
tests/py_tests/: test_akida_export.py  test_c_extension.py  test_classic_tuners.py  test_controllers.py  test_gym_env.py  test_harness.py  test_plants.py  test_rewards.py  test_scenarios.py  test_signals.py  test_simulation_config.py  test_simulation_exec.py  test_tuners.py
